# alvik_maze

./: .gitignore  APPLE_SILICON.md  Dockerfile  Dockerfile.arm64  QUICKSTART.md  README.md  SYSTEM_DOCUMENTATION.md  build.sh  docker-compose.yml  goal_commander.py  package.xml  room_mapper.py  run.sh  rviz_config.rviz  setup.py  start.sh
alvik/: main.py  tof_receiver.py
alvik_firmware/: example_my_secrets.py  main.py  main_backup.py  maze_explorer.py  maze_explorer_blockly.md  test_upload.py  tof_receiver.py
mosquitto/data/: mosquitto.db
ros2_ws/: frames_2025-11-16_14.07.31.gv
ros2_ws/install/alvik_navigation/lib/alvik_navigation/: click_to_move  maze_explorer  odom_publisher  robot_publisher  teleop_keyboard  tof_receiver
ros2_ws/install/alvik_navigation/share/alvik_navigation/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/alvik_navigation/share/alvik_navigation/config/: mapper_params_online_async.yaml
ros2_ws/install/alvik_navigation/share/alvik_navigation/launch/: alvik_slam.launch.py  robot_description.launch.py
ros2_ws/install/alvik_navigation/share/alvik_navigation/urdf/: alvik.urdf
ros2_ws/log/: latest_build
ros2_ws/src/alvik_mapping/resource/: __init__.py
ros2_ws/src/alvik_navigation/: setup.py
ros2_ws/src/alvik_navigation/alvik_navigation/: maze_explorer.py  robot_publisher.py
scripts/: build-arm64.sh  build.sh  monitor_alvik.sh  start.sh  start_foxglove.sh  start_slam.sh  trigger_scan.sh  trigger_wiggle.sh
